[gd_scene load_steps=6 format=3 uid="uid://d3sexayfyq25o"]

[ext_resource type="Script" path="res://scenes/obstacles/obstacle_1.gd" id="1_4c0rj"]
[ext_resource type="Texture2D" uid="uid://03j11ksod35x" path="res://sprites/obstacles/spuntoni.png" id="1_6hhj0"]
[ext_resource type="Texture2D" uid="uid://bjsesifuqjw8c" path="res://sprites/obstacles/spuntoni2.png" id="3_7slp8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iraqh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6hhj0")
}, {
"duration": 1.0,
"texture": ExtResource("3_7slp8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hcthx"]
size = Vector2(64, 64)

[node name="obstacle_1" type="Area2D"]
script = ExtResource("1_4c0rj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iraqh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_hcthx")

[node name="TimerUp" type="Timer" parent="."]

[node name="TimerDown" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerUp" to="." method="_on_timer_up_timeout"]
[connection signal="timeout" from="TimerDown" to="." method="_on_timer_down_timeout"]
